--- a/video-library-project-react-main/package.json
+++ b/video-library-project-react-main/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+     "build": "react-scripts build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
